# kardiaflow

./: .gitignore  README.md  pyproject.toml
data/patients/: patient_part_1.csv  patient_part_2.csv  patient_part_3.csv  patients_part_1.csv  patients_part_2.csv  patients_part_3.csv
docs/: CHANGELOG.md  POSTMORTEM.md  data_dictionary.md  qualiflow.md  source_schema.md
infra/: .env.example  README.md  deploy.bicep  gen_sas.sh  teardown.sh
infra/bicep/: deploy.bicep
infra/deploy/: build_push_kflow.sh  gen_sas.sh  teardown.sh
kflow/: adls.py  config.py  display_utils.py  etl_utils.py
notebooks/: README.md  reset_environment.ipynb  reset_kardia_environment.ipynb
notebooks/00_bronze/claims/: 01_bronze_feedback_copy_into.ipynb  README.md  bronze_claims_autoloader.ipynb  bronze_feedback_copy_into.ipynb  bronze_providers_autoloader.ipynb
notebooks/00_bronze/encounters/: 01_bronze_encounters_autoloader.ipynb  01_bronze_patients_autoloader.ipynb  README.md  (+2 more)
notebooks/04_tests/: kardia_smoke_tests.py
notebooks/providers_claims_feedback/: README.md
notebooks/raw_file_ops/: bootstrap_raw.ipynb  move_new_files.ipynb  raw_bootstrap_filesystem.ipynb  raw_move_new_files.ipynb  raw_reset_environment.ipynb  reset_kardia_environment.ipynb
notebooks_databricks/patients_encounters/: README.md
notebooks_databricks/providers_claims/: README.md
pipelines/: kardia_patients_encounters_job.json  kardiaflow_full_run_batch.json  reset_kardiaflow_full_run_batch.json
src/kflow/: adls.py  config.py  display_utils.py  etl_utils.py  validation_utils.py
(+65 files in other folders)
