[project]
name = "kflow"
version = "0.1.0"        # bump when you rebuild & push a new wheel
description = "Shared utilities for KardiaFlow ETL pipelines"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "pyspark>=3.5",
  "delta-spark>=3.0.0"
]

[build-system]
# tomli is only needed when Python < 3.11
requires = ["setuptools>=68", "wheel", "build", "tomli; python_version < '3.11'"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]